--- a/src/components/CardConteiner/Card.css
+++ b/src/components/CardConteiner/Card.css
@@ -1,3 +1,9 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
 .courses-container {
     display: flex;
     align-items: center;
@@ -26,4 +32,33 @@
   .course-card p{
     color: #000;
     font-size: 14px;
+  }
+  .coursesBox{
+    width: 100%;
+    height: 100%;
+    padding-left: 18px;
+    display: flex;
+    flex-direction: column;
+  }
+  .coursesBoxTop h2{
+    font-size: 28px;
+  }
+   .coursesBoxCenter p{
+    font-size: 24px;
+    
+  }
+  .coursesBoxBottom p{
+    font-size: 20px;
+  }
+  .coursesBoxTop {
+   height: 33%;
+  }
+   .coursesBoxCenter {
+    height: 33%;
+  }
+  .coursesBoxBottom {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    height: 33%;
   }
