--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,3 +16,8 @@
 .headerConteiner p{
     padding-top: 10px;
 }
+@media only screen and (max-height: 800px) {
+    .headerConteiner{
+        padding-top: 4px;
+    }
+  }
